修改生成的mapper文件

--- a/configs/db.properties
+++ b/configs/db.properties
@@ -4,4 +4,4 @@ database.url             =jdbc:mysql://192.168.8.31:3306/oms_platform?characterE
 database.username        =root
 database.password        =Root!111
 database.show_sql        =true
-database.database_name   =b_order
+database.database_name   =b_file
