--- a/configs/generate.properties
+++ b/configs/generate.properties
@@ -10,40 +10,41 @@ ui_search_filed_num=1
 
 #\u751f\u6210\u4ee3\u7801\u76f8\u5173\u7684\u914d\u7f6e
 workspacePath=D:/generateCodes
-srcPath=user-center/src/main/java
-base_package=net.intelink.usercenter
+srcPath=file/src/main/java
+base_package=net.intelink.file
 
-controllerPackage=net.intelink.usercenter.web.controller
-controllerPath=net/intelink/usercenter/web/controller/
 
-servicePackage=net.intelink.usercenter.service
-servicePath=net/intelink/usercenter/service/
+controllerPackage=net.intelink.file.web.controller
+controllerPath=net/intelink/file/web/controller/
 
-serviceImplPackage=net.intelink.usercenter.service.impl
-serviceImplPath=net/intelink/usercenter/service/impl/
+servicePackage=net.intelink.file.service
+servicePath=net/intelink/file/service/
 
-daoPackage=net.intelink.usercenter.core.dao
-daoPath=net/intelink/usercenter/core/dao/
+serviceImplPackage=net.intelink.file.service.impl
+serviceImplPath=net/intelink/file/service/impl/
 
-mapperPackage=net.intelink.usercenter.core.dao
-mapperPath=net/intelink/usercenter/core/dao/
+daoPackage=net.intelink.file.core.dao
+daoPath=net/intelink/file/core/dao/
 
-sqlMapPath=net.intelink.usercenter.core.dao
+mapperPackage=net.intelink.file.core.dao
+mapperPath=net/intelink/file/core/dao/
 
-poPackage=net.intelink.usercenter.core.domain
-poPath=net/intelink/usercenter/core/domain/
+sqlMapPath=net.intelink.file.core.dao
 
-queryVoPackage=net.intelink.usercenter.core.dto
-queryVoPath=net/intelink/usercenter/core/dto/
+poPackage=net.intelink.file.core.domain
+poPath=net/intelink/file/core/domain/
 
-infoVoPackage=net.intelink.usercenter.core.info
-infoVoPath=net/intelink/usercenter/core/info/
+queryVoPackage=net.intelink.file.core.dto
+queryVoPath=net/intelink/file/core/dto/
 
-jspPagePath=net/intelink/usercenter/page/
+infoVoPackage=net.intelink.file.core.info
+infoVoPath=net/intelink/file/core/info/
+
+jspPagePath=net/intelink/file/page/
 
 author=jacliu
 templatePath=/freemarkerTemplatesIntelOms
 
 #\u9700\u8981\u751f\u6210\u7684\u8868\u7684\u914d\u7f6e
-tables=s_user_info
-infos=oms table
+tables=b_file
+infos=file logics
